# gossipgrid

./: AGENTS.md  Cargo.toml  README.md  gossip.md  simulate.sh  start_local_cluster.sh  todo.md
core/: Cargo.toml
core/src/: env.rs  event.rs  gossip.rs  item.rs  lib.rs  node.rs  partition.rs  store.rs  task.rs  web.rs
core/src/store/: memory_store.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  node.rs  task.rs
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
gossipgrid/: Cargo.toml
gossipgrid/src/: cli.rs  env.rs  event.rs  gossip.rs  item.rs  lib.rs  node.rs  node_tests.rs  partition.rs  store.rs  sync.rs  web.rs
gossipgrid/src/store/: memory_store.rs
gossipgrid/src/sync/: transport.rs
gossipgrid/tests/: helpers.rs  int_test.rs
src/: main.rs
viz/: README.md  index.html  sample_data.json  script.js
