[package]
name = "core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
tokio = { version = "1.0", features = ["net", "sync", "time", "rt-multi-thread"] }
warp = { version = "*" }
twox-hash = { version = "*" }
uuid = { version = "1.16.0", features = ["v4"] }
rand = "0.9.0"
log = { version="0.4.26", features=["kv"] }
env_logger = { version="0.11.6", features = ["unstable-kv"]}
names = { version = "0.14.0", default-features = false }
serde = { version = "*", features = ["derive"] }
bincode =  { version = "2.0.0", features = ["serde"] }

[dev-dependencies]