[package]
name = "gossipgrid"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
tokio = { version = "1.0", features = ["net", "sync", "time", "rt-multi-thread", "macros"] }
warp = { version = "0.4.2", features = ["server"] }
twox-hash = { version = "2.1.*" }
uuid = { version = "1.16.*", features = ["v4"] }
rand = "0.9.*"
log = { version="0.4.*", features=["kv"] }
env_logger = { version="0.11.*", features = ["unstable-kv"]}
names = { version = "0.14.*", default-features = false }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*" }
bincode =  { version = "2.0.*", features = ["serde"] }
ttl_cache = { version = "0.5.1" }
async-trait = { version = "0.1.*" }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5.*", features = ["derive"] }
thiserror = { version = "2.0.*" }

[dev-dependencies]