[package]
name = "core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
rand = "0.9.0"
log = { version="0.4.26", features=["kv"] }
env_logger = { version="*" }
names = { version = "0.14.0", default-features = false }
serde = { version = "*", features = ["derive"] }
bincode =  { version = "2.0.0", features = ["serde"] }
